# Manim_CAD_Drawing_utils

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  dimensions.py  path_mapper.py  round_corners.py
src/manim_cad_drawing_utils/: __init__.py  dimensions.py  hatch.py  path_mapper.py  round_corners.py  test_dashes.py  test_manim_plugintemplate.py  test_path_mapper.py  test_path_offsets.py  utils.py
src/manim_plugintemplate/: __init__.py
src/manim_plugintemplate/mobjects/: __init__.py  dotgrid.py
tests/: test_dashes.py  test_dimensions.py  test_hatch.py  test_path_mapper.py  test_path_offsets.py  test_round_corners.py
