[tool.poetry]
name = "manim-CAD_Drawing_Utils"
version = "0.0.5"
description = "A collection of utility functions to for creating CAD-like visuals in Manim."
license = "MIT"
authors = ["GarryBGoode"]
readme = "README.md"
repository = "https://github.com/GarryBGoode/Manim_CAD_Drawing_utils"
documentation="https://github.com/GarryBGoode/Manim_CAD_Drawing_utils"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
	"Programming Language :: Python",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.9"
manim = ">=0.19.0,<=1.0"
scipy = "*"

[tool.poetry.plugins."manim.plugins"]
"manim_cad_drawing_utils" = "manim_cad_drawing_utils"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
